--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="login.js"></script>
 	<script src="admin.js"></script>
 	<script src="parents.js"></script>
+	<script src="teacher.js"></script>
 
 
 </html>
